Yeah should've done a grammar check sooner

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </ul>
 
     <p>
-      So, you're finally here. Welcome to this tiny planet I call home. Here, everyone is free to roam wherever and whenever they want. You might be disgusted by its looks, but in my humble opinion, its simple landscape is anything but disgusting. Transport around is so fast, it's almost instantaneous. I Hope you enjoy your stay. <br> <br>
+      So, you're finally here. Welcome to this tiny planet I call home. Here, everyone is free to roam wherever and whenever they want. You might be disgusted by its looks, but in my humble opinion, its simple landscape is anything but disgusting. Transportation around here is so fast, it's almost instantaneous. I Hope you enjoy your stay. <br> <br>
       PS: You might have expected an explanation of what is to be found here, but that wouldn't be fun now, would it? ;) <br>
       PSS: This website is (clearly) not finished, I'll be putting stuff here whenever I feel like it, please stay tuned if you're interrested in my thoughts.
     </p>
