--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1> <a href="index.html">Home</a> </h1>
     <ul>
       <li> <a href="blog/mod.html">Blog</a> </li>
+      <li> <a href="fun/mod.html">Fun</a> </li>
     </ul>
 
     <p>
