--- a/fun/mod.html
+++ b/fun/mod.html
@@ -10,6 +10,7 @@
     <h1> <a href="../index.html">Home</a> </h1>
     <ul>
       <li> <a href="bouncing_square/mod.html">Bouncing Square</a> </li>
+      <li> <a href="compiler/mod.html">Compiler</a> </li>
     </ul>
 
     <p>
