Added langauge tab and removed blog

--- a/fun/compiler/mod.html
+++ b/fun/compiler/mod.html
@@ -8,6 +8,9 @@
 
   <body>
     <h1> <a href="../../index.html">Home</a> </h1>
+    <p>
+      Some broken stuff, look at the console for an idea
+    </p>
 
     <textarea id="sourceCode" type="text" style="width: 500px; height: 500px;"></textarea>
     <input id="compButton" type="button" value="Compile"></input>
