--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <body>
     <h1> <a href="index.html">Home</a> </h1>
     <ul>
-      <li> <a href="blog/mod.html">Blog</a> </li>
+      <!--
+        <li> <a href="blog/mod.html">Blog</a> </li>
+        You can look at this page, if you so desire.
+      -->
       <li> <a href="fun/mod.html">Fun</a> </li>
+      <li> <a href="lang/mod.html">Connor</a> </li>
     </ul>
 
     <p>
